1、增加了读取图片文件信息到数据库的servlet

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -23,4 +23,14 @@
     <servlet-name>ProductsServlet</servlet-name>
     <url-pattern>/products</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>InitProductsDbServlet</display-name>
+    <servlet-name>InitProductsDbServlet</servlet-name>
+    <servlet-class>com.xpy.action.InitProductsDbServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>InitProductsDbServlet</servlet-name>
+    <url-pattern>/initproducts</url-pattern>
+  </servlet-mapping>
 </web-app>
