1、留言信息完成，可以传输图片文件，通过base64编码，注意传输的图片编码需要把base64头去除。

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -33,4 +33,14 @@
     <servlet-name>InitProductsDbServlet</servlet-name>
     <url-pattern>/initproducts</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>InsertMessageServlet</display-name>
+    <servlet-name>InsertMessageServlet</servlet-name>
+    <servlet-class>com.xpy.action.InsertMessageServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>InsertMessageServlet</servlet-name>
+    <url-pattern>/insertmessage</url-pattern>
+  </servlet-mapping>
 </web-app>
