--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -18,6 +18,7 @@
   <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.jpg</url-pattern>
+    <url-pattern>*.JPG</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>ProductsServlet</servlet-name>
